# camera-calibration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  convert_all.sh  example.sh  format-all.sh  memcheck.sh  run.sh
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  README.md
apps/advanced-fit/: CMakeLists.txt  main.c
apps/correct-image/: CMakeLists.txt  main.c
apps/correct-patches/: CMakeLists.txt  main.c
apps/demo-demoz/: CMakeLists.txt  main.cpp
apps/derawzinator/: CMakeLists.txt  main.c
apps/extract-matrix/: CMakeLists.txt  main.c
apps/extract-patches/: CMakeLists.txt  main.c
apps/gen-colorchart-image/: CMakeLists.txt  main.c
apps/gen-ref-colorchart/: CMakeLists.txt  main.c
apps/gui/: CMakeLists.txt  colourotron.desktop  fittingdialog.cpp  fittingdialog.h  fittingdialog.ui  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  imagemodel.cpp  imagemodel.h  macbeth-detect_fr_FR.ts  macbethmeasuredmodel.cpp  macbethmeasuredmodel.h  macbethmodel.cpp  macbethmodel.h  macbethreferencemodel.cpp  macbethreferencemodel.h  macbethview.cpp  macbethview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radiometry.h  resource.qrc  resource.rc
apps/gui/cmake/: ColourotronCPack.cmake  ColourotronCPackOptions.cmake.in  Macdeployqt.cmake  Windeployqt.cmake
apps/gui/icons/: Colourotron.icns  spectral_viewer.icns
apps/gui/theme/: theme.qrc  theme.qss
apps/overlay-areas/: CMakeLists.txt  main.c
apps/raw-to-dng/: CMakeLists.txt  main.c  matrix3x3.c  matrix3x3.h
apps/tiff-specific-legacy/correct-image-tiff/: CMakeLists.txt  main.c
apps/tiff-specific-legacy/extract-patches-tiff/: CMakeLists.txt  main.c
color/: load.py
data/measurements/: boxes.csv
lib/: CMakeLists.txt
lib/colors/: CMakeLists.txt  color-converter.c  io.c  spectrum-converter.c
lib/colors/include/: color-converter.h  io.h  macbeth-data.h  spectrum-converter.h  util.h
lib/image/: CMakeLists.txt  demosaic.cpp  demosaicamaze.cpp  image.cpp  imagedng.cpp  imageprocessing.cpp  imageraw.cpp  imagergb.cpp
lib/image/include/: demosaicamaze.h  demosaicing.h  image.h  imagedng.h  imageprocessing.h  imageraw.h  imagergb.h
measurements/: boxes.csv
python/: example.sh  extract_matrix.py  extract_patches.py
python/color/: Spectrum.py  convert.py
python/data/: macbeth_patches.csv
python/measurements/: LED_coupole.spd
src/: main.cpp
